packages/pxweb2/src/app/components/FilterSidebar/FilterSidebar.module.scss
@use '$ui/src/lib/text-styles.scss';
@use '$ui/src/lib/breakpoints.scss' as breakpoint;

.sideBar {
  grid-area: sideBar;
  overflow-y: visible;
  position: sticky;
  top: 0;
  height: 100%;

  @media #{breakpoint.$xsmall}, #{breakpoint.$small} , #{breakpoint.$medium} {
    padding: 12px 28px;
    overflow-y: auto;
  }
}

.filterHeading {
  margin-bottom: 4px;
}

.filterList {
  margin: 20px 0 0;
  padding: 0;
  list-style-type: none;
}

.subjectToggle:not(:first-of-type) {
  padding-left: 24px;
}

